# Backend

./: .gitignore  LICENSE  README.md  docker-compose.production.yml  docker-compose.yml  env_template.txt  guidelines.txt  requirements.txt
backend/: Dockerfile  README.md  google_drive.json  guidelines.txt  manage.py  pyproject.toml  requirements.txt
backend/conference/: asgi.py  base_settings.py  dev_settings.py  production_settings.py  urls.py  wsgi.py
backend/conference/settings/: base.py  dev.py  prod.py
backend/event/: admin.py  bank_choices.py  models.py
backend/event/migrations/: 0001_initial.py  0002_clearancefile_created_at_alter_clearancefile_email.py  0002_initial.py  0003_alter_paymentreceipt_verification_log_and_more.py  0003_usercontactrequest.py  0004_alter_abstract_abstract_document_file_and_more.py  0004_alter_clearancefile_submission_type_and_more.py  0005_alter_clearancefile_submission_file.py  0005_alter_userevent_user.py  0006_alter_abstract_abstract_document_file.py  0006_remove_receiptverificationlogs_verified_by_and_more.py  0007_alter_abstract_coresponding_author_email_and_more.py  0007_alter_abstract_receipt_alter_clearancefile_receipt_and_more.py  0008_alter_abstract_research_area.py  0008_paymentreceipt_user_notified.py  0009_alter_abstract_research_area.py  0010_alter_abstract_abstract_document_file_and_more.py
backend/lib/: mail.py  middleware.py  storage.py  tasks.py  utils.py
backend/scripts/: re_register.py  reciept_verification.py
backend/user/: models.py
backend/user/migrations/: 0001_initial.py  0002_admin.py  (+1 more)
(+141 files in other folders)
